--- a/index.html
+++ b/index.html
@@ -6,14 +6,121 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/83f4286022.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Long+Cang|Montserrat:300,400,700&display=swap" rel="stylesheet" />
-    <title>Document</title>
-    <i class="fas fa-crown"></i>
-    <i class="fas fa-quote-left"></i>
-    <i class="fas fa-quote-right"></i>
+    <link rel="stylesheet" href="./src/CSS/style.css">
+
+    <title>Agence Immo</title>
+
+
+
 </head>
 
 <body>
+    <header>
+        <h1>
+            <logo><i class="fas fa-crown"></i></logo>
+            Ledor
+        </h1>
 
+        <nav>
+            <ul>
+                <li><a href="">Nos offres</a></li>
+                <li><a href="">Notre equipe</a></li>
+                <li><a href="">Contact</a></li>
+
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="background">
+            <div class="textbox1">
+                <h2>Un <span>immobilier</span>d'exception <br>pour des clients d'exception</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos doloribus natus quo velit ullam reiciendis, mollitia quae illum deserunt sapiente ratione pariatur ipsam fuga aperiam odit commodi! Neque, fugiat!</p>
+            </div>
+        </section>
+
+        <section class="offres">
+            <h3>Nos dernieres offres</h3>
+            <div class="containeur">
+                <div>
+                    <img src="./src/img/house-1.jpg" alt="house1">
+                    <p>Appartement - Paris 75007 <br>11 chambre 450 m2</p>
+                    <hr>
+                    <p>3 900 000€ - $4 200 000</p>
+                    <div>
+                        <img src="./src/img/house-2.jpg" alt="house2">
+                        <p>Appartement - Paris 75001 <br> 5 chambres 233m2</p>
+                        <hr>
+                        <p>3 900 000€ - $4 200 000</p>
+                    </div>
+                    <div>
+                        <img src="./src/img/house-3.jpg" alt="house3">
+                        <p>Appartement - Paris 75001 <br> 5 chambres 233m2</p>
+                        <hr>
+                        <p>3 900 000€ - $4 200 000</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div><img src="./src/img/team.jpg" alt="team"></div>
+            <div>
+                <h3>Une équipe de <span>professionnels</span>avec plus de 10 ans d'expérience</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae laborum repellat quam quo? Veritatis rerum incidunt officiis unde omnis in perspiciatis, laboriosam architecto, aliquam commodi, aspernatur cupiditate enim vel nesciunt.</p>
+            </div>
+        </section>
+
+        <section>
+            <h3>Ecoutez ce qu'ils pensent de nous</h3>
+            <div>
+                <div>
+                    <p><i class="fas fa-quote-left"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique modi voluptates, qui nemo iusto at tenetur cum! Iure facilis voluptatem cumque laboriosam aut ipsam nobis blanditiis nisi recusandae?
+                        Perspiciatis, rem!<i class="fas fa-quote-right"></i></p>
+                </div>
+                <div>
+                    <img src="./src/img/person-1.jpg" alt="person1">
+                    <p>Jean Dupont <br>CEO etoile</p>
+                </div>
+
+                <div>
+                    <div>
+                        <p><i class="fas fa-quote-left"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique modi voluptates, qui nemo iusto at tenetur cum! Iure facilis voluptatem cumque laboriosam aut ipsam nobis blanditiis nisi recusandae?
+                            Perspiciatis, rem!<i class="fas fa-quote-right"></i></p>
+                    </div>
+                    <div>
+                        <img src="./src/img/person-2.jpg" alt="person2">
+                        <p>Arthur Lac <br>Developpeur Web</p>
+                    </div>
+
+                    <div>
+                        <div>
+                            <p><i class="fas fa-quote-left"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique modi voluptates, qui nemo iusto at tenetur cum! Iure facilis voluptatem cumque laboriosam aut ipsam nobis blanditiis nisi recusandae?
+                                Perspiciatis, rem!<i class="fas fa-quote-right"></i></p>
+                        </div>
+                        <div>
+                            <img src="./src/img/person-3.jpg" alt="person3">
+                            <p>Julie Roux<br>Developpeuse web</p>
+                        </div>
+        </section>
+
+        <section>
+            <div>
+                <H3>Pour nous <span>contacter</span></H3>
+                <form action="formulaire">
+                    <input type="nom">
+                    <input type="email">
+                    <input type="text">
+                    <button>Soumettre</button>
+                </form>
+            </div>
+        </section>
+    </main>
 </body>
+
+<footer>
+    <p>Copyright © 2009</p>
+</footer>
+
 
 </html>
