--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main>
         <section class="background">
             <div class="textbox1">
-                <h2>Un <span>immobilier</span>d'exception <br>pour des clients d'exception</h2>
+                <h2>Un <span>immobilier</span> d'exception <br>pour des clients d'exception</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos doloribus natus quo velit ullam reiciendis, mollitia quae illum deserunt sapiente ratione pariatur ipsam fuga aperiam odit commodi! Neque, fugiat!</p>
             </div>
         </section>
@@ -44,29 +44,38 @@
             <div class="containeur">
                 <div>
                     <img src="./src/img/house-1.jpg" alt="house1">
-                    <p>Appartement - Paris 75007 <br>11 chambre 450 m2</p>
-                    <hr>
-                    <p>3 900 000€ - $4 200 000</p>
                     <div>
-                        <img src="./src/img/house-2.jpg" alt="house2">
+                        <p>Appartement - Paris 75007 <br>11 chambre 450 m2</p>
+                        <hr>
+                        <p>3 900 000€ - $4 200 000</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="./src/img/house-2.jpg" alt="house2">
+                    <div>
+
                         <p>Appartement - Paris 75001 <br> 5 chambres 233m2</p>
                         <hr>
                         <p>3 900 000€ - $4 200 000</p>
                     </div>
+                </div>
+                <div>
+
+                    <img src="./src/img/house-3.jpg" alt="house3">
                     <div>
-                        <img src="./src/img/house-3.jpg" alt="house3">
                         <p>Appartement - Paris 75001 <br> 5 chambres 233m2</p>
                         <hr>
                         <p>3 900 000€ - $4 200 000</p>
                     </div>
                 </div>
             </div>
+            </div>
         </section>
 
-        <section>
-            <div><img src="./src/img/team.jpg" alt="team"></div>
-            <div>
-                <h3>Une équipe de <span>professionnels</span>avec plus de 10 ans d'expérience</h3>
+        <section class="professionnel">
+            <div class="team"></div>
+            <div class="textbox2">
+                <h3>Une équipe de <span>professionnels</span> avec plus de 10 ans d'expérience</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae laborum repellat quam quo? Veritatis rerum incidunt officiis unde omnis in perspiciatis, laboriosam architecto, aliquam commodi, aspernatur cupiditate enim vel nesciunt.</p>
             </div>
         </section>
