--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
         </section>
 
-        <section>
+        <section class="commentaires">
             <h3>Ecoutez ce qu'ils pensent de nous</h3>
             <div>
                 <div>
@@ -113,14 +113,14 @@
                         </div>
         </section>
 
-        <section>
+        <section class="contact">
             <div>
                 <H3>Pour nous <span>contacter</span></H3>
                 <form action="formulaire">
-                    <input type="nom">
-                    <input type="email">
-                    <input type="text">
-                    <button>Soumettre</button>
+                    <input type="nom" placeholder="Nom" name="nom">
+                    <input type="email" placeholder="Email" name="email">
+                    <input type="text" placeholder="Votre message" name="message">
+                    <button type="submit">Soumettre</button>
                 </form>
             </div>
         </section>
